# TP1-ROBM

./: README.md  pixi.toml  rapport.docx
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/joy_teleop/lib/joy_teleop/: joy_teleop
install/joy_teleop/share/joy_teleop/: package.sh
install/key_teleop/share/key_teleop/: package.sh
install/mouse_teleop/lib/mouse_teleop/: mouse_teleop
install/mouse_teleop/share/mouse_teleop/: package.sh
install/robm_bridge/lib/robm_bridge/: udp_bridge  zenoh_bridge
install/robm_bridge/share/robm_bridge/: package.dsv  package.ps1  package.sh  package.xml
install/robm_interfaces/share/robm_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml  package.zsh
install/robm_tp1_color/lib/robm_tp1_color/: couleur
install/robm_tp1_color/share/robm_tp1_color/: package.bash  package.dsv  (+4 more)
log/: latest_build
robm_tp1_color/: setup.py
src/install/: local_setup.bash  local_setup.ps1  local_setup.sh  local_setup.zsh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/install/robm_bridge/share/robm_bridge/: package.bash  package.ps1  package.sh  package.xml  package.zsh
src/log/: latest_build
src/robm_bridge/: setup.cfg  setup.py
src/robm_bridge/robm_bridge/: udp_bridge.py
src/robm_interfaces/: CMakeLists.txt  LICENSE  package.xml
src/robm_tp1_color/: package.xml  setup.cfg  setup.py
src/robm_tp2_move/: package.xml  setup.cfg  setup.py
src/robm_tp2_move/robm_tp2_move/: avance_motor.py  droit_motor.py  dynamic_motor.py  gauche_motor.py
(+227 files in other folders)
