<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robm_bridge</name>
  <version>0.2.0</version>
  <description>Bridges to connect to the M5Stick Rover for ROBM robotics labs at ISTIC (University of Rennes)</description>
  <maintainer email="vincent.drevelle@univ-rennes1.fr">Vincent Drevelle</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>robm_interfaces</exec_depend>
  <!-- <exec_depend>eclipse-zenoh</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
